--- a/assets/css/styleguide.css
+++ b/assets/css/styleguide.css
@@ -74,4 +74,5 @@
     /*font-family: 'trap-Bold', ui-serif; !* Bold font for emphasis *!*/
     text-align: center;
     font-size: 1.5em;
+    margin: 0;
 }
